(executable
 (name main)
 (libraries irmin bechamel yojson ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving_yojson)))

(rule
 (alias bench)
 (package irmin-bench)
 (deps main.exe)
 (action (progn)))

;; Require [main.ml] to compile during tests

(rule
 (alias runtest)
 (package irmin-bench)
 (deps main.exe)
 (action progn))

(rule
 (alias runbench-type)
 (package irmin-bench)
 (deps (universe))
 (action
  (run %{exe:main.exe})))
