(library
 (name test_mem)
 (modules test_mem)
 (libraries irmin-test irmin-mem))

(test
 (name test)
 (modules test)
 (package irmin-mem)
 (libraries digestif.ocaml test_mem))

(executable
 (name bench)
 (modules bench)
 (libraries irmin-mem irmin-test.bench))

(alias
 (name bench)
 (action
  (run ./bench.exe)))
