(library
 (name test_mem)
 (modules test_mem)
 (libraries irmin-test irmin-mem))

(executable
 (name test)
 (modules test)
 (libraries digestif.ocaml test_mem))

(rule
 (alias runtest)
 (package irmin-mem)
 (action
  (run ./test.exe -q --color=always)))

(executable
 (name bench)
 (modules bench)
 (libraries irmin-mem irmin-test.bench))

(rule
 (alias bench)
 (action
  (run ./bench.exe)))
