(library
 (name test_pack)
 (modules test_pack multiple_instances)
 (libraries irmin-test irmin-pack alcotest-lwt common))

(test
 (name test)
 (modules test)
 (package irmin-pack)
 (libraries digestif.ocaml test_pack))

(executable
 (name bench)
 (modules bench)
 (libraries irmin_pack irmin-test.bench))

(alias
 (name bench)
 (action
  (run ./bench.exe)))

(library
 (name common)
 (modules common)
 (libraries irmin-test irmin-pack))
