(library
 (name test_unix)
 (modules test_unix)
 (libraries irmin-test test_fs test_git test_http irmin-unix))

(executable
 (name test)
 (modules test)
 (libraries checkseum.c digestif.c test_unix))

(rule
 (alias runtest)
 (package irmin-unix)
 ; Locks mechanism is broken in Dune lang 2.0+
 (deps
  (alias ../irmin-http/runtest))
 (locks ../http)
 (action
  (chdir
   %{workspace_root}
   (run %{exe:test.exe} -q --color=always))))
